@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -76,29 +76,16 @@ package gc.stringdedup;
  */
 
 /*
- * @test id=ZSinglegen
+ * @test id=Z
  * @summary Test string deduplication during young GC
  * @bug 8029075
- * @requires vm.gc.ZSinglegen
+ * @requires vm.gc.Z
  * @library /test/lib
  * @library /
  * @modules java.base/jdk.internal.misc:open
  * @modules java.base/java.lang:open
  *          java.management
- * @run driver gc.stringdedup.TestStringDeduplicationYoungGC Z -XX:-ZGenerational
- */
-
-/*
- * @test id=ZGenerational
- * @summary Test string deduplication during young GC
- * @bug 8029075
- * @requires vm.gc.ZGenerational
- * @library /test/lib
- * @library /
- * @modules java.base/jdk.internal.misc:open
- * @modules java.base/java.lang:open
- *          java.management
- * @run driver gc.stringdedup.TestStringDeduplicationYoungGC Z -XX:+ZGenerational
+ * @run driver gc.stringdedup.TestStringDeduplicationYoungGC Z
  */
 
 public class TestStringDeduplicationYoungGC {
