@@ -1,6 +1,6 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
- * Copyright (c) 2023, Red Hat, Inc. and/or its affiliates.
+ * Copyright (c) 2023, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2025, Red Hat, Inc. and/or its affiliates.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,37 +27,45 @@ import jdk.test.lib.dcmd.CommandExecutor;
 import jdk.test.lib.dcmd.JMXExecutor;
 import jdk.test.lib.process.OutputAnalyzer;
 
-import java.io.*;
-import java.util.ArrayDeque;
-import java.util.Collections;
-import java.util.Deque;
-import java.util.HashSet;
-import java.util.regex.Pattern;
-
 /*
- * @test
+ * @test id=normal
  * @summary Test of diagnostic command System.map
  * @library /test/lib
- * @requires (os.family=="linux")
+ * @requires (vm.gc != "Z") & (os.family == "linux" | os.family == "windows" | os.family == "mac")
  * @modules java.base/jdk.internal.misc
  *          java.compiler
  *          java.management
  *          jdk.internal.jvmstat/sun.jvmstat.monitor
- * @run testng SystemMapTest
+ * @build jdk.test.whitebox.WhiteBox
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UsePerfData SystemMapTest
  */
-public class SystemMapTest {
+
+/*
+ * @test id=zgc
+ * @bug 8346717
+ * @summary Test of diagnostic command System.map using ZGC
+ * @library /test/lib
+ * @requires vm.gc.Z & (os.family == "linux" | os.family == "windows" | os.family == "mac")
+ * @modules java.base/jdk.internal.misc
+ *          java.compiler
+ *          java.management
+ *          jdk.internal.jvmstat/sun.jvmstat.monitor
+ * @build jdk.test.whitebox.WhiteBox
+ * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @run testng/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:+UsePerfData -XX:+UseZGC SystemMapTest
+ */
+public class SystemMapTest extends SystemMapTestBase {
     public void run(CommandExecutor executor) {
         OutputAnalyzer output = executor.execute("System.map");
-        output.reportDiagnosticSummary();
         boolean NMTOff = output.contains("NMT is disabled");
-
-        String regexBase = ".*0x\\p{XDigit}+ - 0x\\p{XDigit}+ +\\d+";
-        output.shouldMatch(regexBase + ".*jvm.*");
+        for (String s: shouldMatchUnconditionally()) {
+            output.shouldMatch(s);
+        }
         if (!NMTOff) { // expect VM annotations if NMT is on
-            output.shouldMatch(regexBase + ".*JAVAHEAP.*");
-            output.shouldMatch(regexBase + ".*META.*");
-            output.shouldMatch(regexBase + ".*CODE.*");
-            output.shouldMatch(regexBase + ".*STACK.*main.*");
+            for (String s: shouldMatchIfNMTIsEnabled()) {
+                output.shouldMatch(s);
+            }
         }
     }
 
