@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,6 @@
 
 package stream;
 
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.testng.Assert;
 
@@ -42,11 +41,9 @@ import javax.xml.stream.util.EventReaderDelegate;
 /*
  * @test
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow stream.EventReaderDelegateTest
  * @run testng/othervm stream.EventReaderDelegateTest
  * @summary Test EventReaderDelegate.
  */
-@Listeners({jaxp.library.FilePolicy.class})
 public class EventReaderDelegateTest {
 
     public EventReaderDelegateTest(String name) {
