@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,15 +23,18 @@
 
 /*
  * @test
- * @bug 4018937 8008577
+ * @bug 4018937 8008577 8174269
  * @summary Confirm that methods which are newly added to support BigDecimal and BigInteger work as expected.
- * @run junit/othervm -Djava.locale.providers=COMPAT,SPI BigDecimalFormat
+ * @run junit BigDecimalFormat
  */
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.text.*;
-import java.util.*;
+import java.text.DecimalFormat;
+import java.text.FieldPosition;
+import java.text.MessageFormat;
+import java.text.NumberFormat;
+import java.util.Locale;
 
 import org.junit.jupiter.api.Test;
 
@@ -98,6 +101,7 @@ public class BigDecimalFormat {
     /**
      * Test for normal big numbers which have the fraction part
      */
+    @Test
     void test_Format_in_NumberFormat_BigDecimal() {
         String from, to;
 
@@ -519,6 +523,7 @@ public class BigDecimalFormat {
     /**
      * Test for normal big numbers which have the fraction part with multiplier
      */
+    @Test
     void test_Format_in_NumberFormat_BigDecimal_usingMultiplier() {
         String from, to;
 
@@ -579,6 +584,7 @@ public class BigDecimalFormat {
     /**
      * Test for normal big numbers which don't have the fraction part
      */
+    @Test
     void test_Format_in_NumberFormat_BigInteger() {
         String from, to;
 
@@ -719,6 +725,7 @@ public class BigDecimalFormat {
      * Test for normal big numbers which don't have the fraction part with
      * multiplier
      */
+    @Test
     void test_Format_in_NumberFormat_BigInteger_usingMultiplier() {
         String from, to;
 
@@ -774,6 +781,7 @@ public class BigDecimalFormat {
      * Test for normal Long numbers when maximum and minimum digits are
      * specified
      */
+    @Test
     void test_Format_in_NumberFormat_Long_checkDigits() {
         String from, to;
 
@@ -889,6 +897,7 @@ public class BigDecimalFormat {
      *    Double.POSITIVE_INFINITY
      *    Double.NEGATIVE_INFINITY
      */
+    @Test
     void test_Format_in_NumberFormat_SpecialNumber() {
         String from, to;
 
@@ -907,10 +916,10 @@ public class BigDecimalFormat {
         };
         int multipliers[] = {0, 5, -5};
         String[][] expected = {
-            {"-0", "0", "\ufffd", "\ufffd", "0", "0", "\ufffd", "-0", "-0"},
-            {"-0", "0", "\ufffd", "\u221e", "25.5", "25", "-\u221e", "-25.5",
+            {"-0", "0", "NaN", "NaN", "0", "0", "NaN", "-0", "-0"},
+            {"-0", "0", "NaN", "\u221e", "25.5", "25", "-\u221e", "-25.5",
              "-25"},
-            {"0", "-0", "\ufffd", "-\u221e", "-25.5", "-25", "\u221e", "25.5",
+            {"0", "-0", "NaN", "-\u221e", "-25.5", "-25", "\u221e", "25.5",
              "25"},
         };
 
@@ -931,6 +940,7 @@ public class BigDecimalFormat {
      *   (Formatting Long.MIN_VALUE w/ multiplier=-1 used to return a wrong
      *    number.)
      */
+    @Test
     void test_Format_in_NumberFormat_Other() {
         String from, to;
 
@@ -963,6 +973,7 @@ public class BigDecimalFormat {
     /**
      * Test for MessageFormat
      */
+    @Test
     void test_Format_in_MessageFormat() {
         MessageFormat mf = new MessageFormat(
             "  {0, number}\n" +
@@ -976,7 +987,7 @@ public class BigDecimalFormat {
             "  {1, number, currency}\n" +
             "  {1, number, percent}\n" +
             "  {1, number,0.#######E0}\n",
-            Locale.US
+            Locale.forLanguageTag("en-US-u-cf-account")
         );
         Object[] testArgs = {
             new BigInteger("9876543210987654321098765432109876543210"),
